update tornado, add flood, add solution

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -60,7 +60,6 @@
     howpublished = {\url{http://jenkins-ci.org}},
     note = "Online; accessed 22-February-2013"
 }
-
 @misc{cassandra,
     author = {Cassandra},
     title = {{The Apache Cassandra Project}},
@@ -68,7 +67,13 @@
     howpublished = {\url{http://cassandra.apache.org}},
     note = "Online; accessed 24-February-2013"
 }
-
+@misc{hbase,
+    author = {Hbase},
+    title = {{Apache Hbase}},
+    year = 2013,
+    howpublished = {\url{http://hbase.apache.org}},
+    note = "Online; accessed 15-March-2013"
+}
 @misc{materialized_views,
     author = {Wikipedia},
     title = {{Materialized Views}},
@@ -111,4 +116,17 @@
     year = 2012,
     howpublished = {\url{http://www.forbes.com/sites/darden/2012/12/13/big-data-small-bets/}},
     note = "Online; accessed 13-December-2012"
+}
+ @article{anderson,
+	author = {Wikle, Christopher K. and Christopher J. Anderson},
+	title = {{Climatological analysis of tornado report counts using a hierarchical Bayesian spatiotemporal model}},
+	journal = {Journal of Geophysical Research},
+	volume = {108},
+	year = 2003,
+}
+ @article{mapreduce,
+	author = {Dean, Jeffrey and Sanjay Ghemawat},
+	title = {{MapReduce: Simplified Data Processing on Large Clusters}},
+	journal = {OSDI'04: Sixth Symposium on Operating System Design and Implementation},
+	year = 2004,
 }
