--- a/index.tex
+++ b/index.tex
@@ -50,6 +50,8 @@
     \input{executive_summary}
     \input{introduction}
     \input{tornado}
+	\input{flood}
+	\input{solution}
 %    \include{chapter3}
 %    \include{chapter4}
 %    \include{chapter5}
