--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,3 +1,10 @@
+@misc{rwe,
+    author = {Hamm, Steve},
+    title = {{How Big Data Can Boost Weather Forecasting}},
+    year = 2013,
+    howpublished = {\url{hhttp://readwrite.com/2013/02/28/how-big-data-can-boost-weather-forecasting}},
+    note = "Online; accessed 1-February-2013"
+}
 @misc {climatedgeurl,
     howpublished = "\url{http://www.csc.com/public_sector/offerings/59474/82693-climatedge_risk_sector_reports}",
     title ={{ClimatEdge Risk-Sector Reports}},
@@ -13,15 +20,6 @@
     year = 2013,
     note = "Online; accessed 4-January-2013"
 }
-
-@misc{rwe,
-    author = {Hamm, Steve},
-    title = {{How Big Data Can Boost Weather Forecasting}},
-    year = 2013,
-    howpublished = {\url{hhttp://readwrite.com/2013/02/28/how-big-data-can-boost-weather-forecasting}},
-    note = "Online; accessed 1-February-2013"
-}
-
 @misc{ncdc,
     author = {National Oceanic and Atmospheric Administration},
     title = {{U.S. Tornado Climatology}},
@@ -36,7 +34,6 @@
     howpublished = {\url{http://www.bom.gov.au/climate/current/soihtm1.shtml}},
     note = "Online; accessed 15-February-2013; less than 1MB"
 }
-
 @misc{mdisc,
     author = {National Aeronautics and Space Administration},
     title = {{MERRA Data Holdings}},
@@ -44,7 +41,6 @@
     howpublished = {\url{http://disc.sci.gsfc.nasa.gov/daac-bin/DataHoldings.pl}},
     note = "Online; accessed 15-February-2013; less than 100TB"
 }
-
 @misc{hdss,
     author = {National Oceanic and Atmospheric Administration},
     title = {{HDSS Access System}},
@@ -52,7 +48,6 @@
     howpublished = {\url{http://has.ncdc.noaa.gov/pls/plhas/HAS.FileAppSelect?datasetname=7000}},
     note = "Online; accessed 15-February-2013; less than 1.6TB"
 }
-
 @misc{jenkins,
     author = {Jenkins},
     title = {{An extendable open source continuous integration server}},
@@ -81,7 +76,6 @@
     howpublished = {\url{http://en.wikipedia.org/wiki/Materialized_view}},
     note = "Online; accessed 24-February-2013"
 }
-
 @misc{point_in,
     author = {CSC},
     title = {{POINT IN Development}},
@@ -130,3 +124,18 @@
 	journal = {OSDI'04: Sixth Symposium on Operating System Design and Implementation},
 	year = 2004,
 }
+@misc{keller,
+    author = {Keller, Christopher N.},
+    title = {{MERRA Processing in C}},
+    year = 2013,
+    note = "Unpublished"
+}
+@misc{iii,
+    author = {Insurance Information Institute},
+    title = {{Industry Overview}},
+    year = 2011,
+    howpublished = {\url{http://www.iii.org/facts_statistics/industry-overview.html}},
+    note = "Online; accessed 13-March-2012"
+}
+
+
