--- a/solution.tex
+++ b/solution.tex
@@ -1,6 +1,6 @@
 %!TEX root=index.tex
 \section{Reference Big Data Platform}
-In order to quantitatively process the flood data, we need a service platform capable of performing the following operational layers:
+In order to quantitatively process ever increasing amounts of complex data, we need a service platform capable of performing the following operational layers:
 \begin{itemize}
 	\item retrieving data updates
 	\item storing and indexing for optimal retrieval
