--- a/title.tex
+++ b/title.tex
@@ -1,11 +1,11 @@
 %!TEX root=index.tex
 \begin{titlepage}
-	\vspace*{\fill}
-	\begin{center}
-		\textbf{\huge Christopher Keller}\\[1cm]
-        \textit{Quantitative Prediction Adds Significant Enhancement to \climatedge}\\ [.5cm]
-		\normalsize CSC NPS Solution Leadership Institute\\ [.5cm]
-        \normalsize \today
-	\end{center}
-	\vspace*{\fill}
+    \vspace*{\fill}
+    \begin{center}
+        \textbf{\Large Christopher Keller}\\[1cm]
+        \textit{A Big Data Approach To \climatedge}\\ [.5cm]
+         CSC NPS Solution Leadership Institute\\ [.5cm]
+        \today
+    \end{center}
+    \vspace*{\fill}
 \end{titlepage}
