--- a/executive_summary.tex
+++ b/executive_summary.tex
@@ -1,3 +1,7 @@
 %!TEX root=index.tex
 \section{Executive Summary}
-here is some text.
+\textsc{CSC's} \climatedge offering is focused on providing predictive climate analytics using public government data sets. By using various algorithms, both proprietary and public, \textsc{CSC} hopes to offer its customers a distinct advantage by allowing strategic business decisions to be made based on forward looking climate forecasts. Planned offerings for the general insurance industry include tornado count prediction, flood prediction, hail prediction and forensics.\\
+
+This paper focuses on contrasting the tornado and flood offerings with respect to the technology needed to store, process, and present the analytics. Tornado prediction involves running a published algorithm against a relatively small amount of well formed data on any modern home computing system. Flood prediction, on the other hand, requires substantially larger data sets and more diverse data sources such as newspaper reports and building plans. The same platform which delivered the tornado counts is not capable of handling flood prediction. Without an investment in big data technology and expertise, the range of \climatedge offerings will be limited. \\
+
+Following that, a reference platform implementation is presented that will allow future \climatedge offerings to scale in processing both large and complex data sets, thus enabling a wider variety of business cases to be undertaken. Future directions are considered and presented.
